feat : npm and pip updates

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,8 +44,9 @@ dev = [
 ]
 
 [project.scripts]
-git-quick = "git_quick.cli:quick"
-git-story = "git_quick.cli:story"
+git-quick = "git_quick.cli:cli"
+# Backward compatibility aliases (deprecated)
+git-story = "git_quick.cli:story_cmd"
 git-time = "git_quick.cli:time_track"
 git-sync-all = "git_quick.cli:sync_all"
 
