--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "openai>=1.0",
     "anthropic>=0.25",
     "requests>=2.31",
+    "urllib3<2.0",  # Fix LibreSSL compatibility warning on macOS
 ]
 
 [project.optional-dependencies]
