--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "git-quick"
 version = "1.0.0"
 description = "Lightning-fast Git workflows with AI-powered commit messages"
 authors = [
-    {name = "Your Name", email = "your.email@example.com"}
+    {name = "Vishnu Swaroop", email = "vswaroop04@gmail.com"}
 ]
 readme = "README.md"
 requires-python = ">=3.8"
